2011-07-27  Stefano Lattarini  <stefano.lattarini@gmail.com>

	testsuite: fix spurious failures with Solaris /bin/sh
	* tests/tap-more.test: Use `echo > file', not `: > file', to
	create empty files in the "for" loops; this is required since,
	as documented in the autoconf manual, Solaris 10 /bin/sh
	"optimizes" away the `:' command after the first iteration,
	even if it is redirected.
	* tests/test-driver-custom-multitest-recheck2.test: Likewise.
	* tests/tap-numeric-description.test: Partial rewrite to avoid
	using positional parameters from the 10th onward, which are
	unportable to Solaris /bin/sh (using `${10}' causes the shell
	to die with "bad substitution").

2011-07-31  Stefano Lattarini  <stefano.lattarini@gmail.com>

	simple tests: support developer-defined fd redirections
	Motivated by coreutils bug#8846, and related discussions:
	 <http://debbugs.gnu.org/cgi/bugreport.cgi?bug=8846>
	 <http://lists.gnu.org/archive/html/bug-autoconf/2011-06/msg00002.html>
	In those threads it has been shown how problematic it can be to do
	portable file descriptor redirections in the testsuite when using
	the Automake testsuite harness.  This change should remedy to that
	situation.
	* lib/am/check2.am (?GENERIC?%EXT%$(EXEEXT).log,
	?GENERIC?%EXT%.log, ?!GENERIC?%OBJ%): Append redirection defined
	in $(AM_TESTS_FD_REDIRECT) to the command-line invocations of the
	test scripts.
	* lib/am/check.am [!%?PARALLEL_TESTS%] $(check-TESTS): Likewise.
	* NEWS: Update.
	* doc/automake.texi (Script-based Testsuites): Document the new
	feature.
	* tests/check-fd-redirect.test: New test.
	* tests/parallel-tests-fd-redirect.test: Likewise.
	* tests/parallel-tests-am_tests_environment.test: Remove checks
	about the use of redirections in AM_TESTS_ENVIRONMENT: they would
	check deprecated (if not undefined) behaviour now.  Strengthen a
	couple of still valid checks, to keep the test more in sync with
	the documentation.  Improve debugging information.
	* tests/Makefile.am (TESTS): Update.