@@ -1,5 +1,16 @@
 2011-07-27  Stefano Lattarini  <stefano.lattarini@gmail.com>
 
+	testsuite: fix a spurious failure with non-bash shells
+	* tests/tap-fancy2.test: Remove an unportable use of backslashes
+	with the `echo' builtin, which was causing some shells (among them
+	bash and Debian /bin/ksh) to print a `\\' string, while other
+	shells (among them zsh, dash, and Solaris /bin/sh and /bin/ksh)
+	were unexpectedly printing a single `\' character.  Since we are
+	at it, add a sanity check to ensure that this issue does not
+	resurface.
+
+2011-07-27  Stefano Lattarini  <stefano.lattarini@gmail.com>
+
 	testsuite: fix spurious failures with Solaris /bin/sh
 	* tests/tap-more.test: Use `echo > file', not `: > file', to
 	create empty files in the "for" loops; this is required since,
